@@ -1,1 +1,14 @@
 Assignment 1.01 - Terrain Generation
+
+Hi TA,
+
+This implementation of assignment 1.01 creates a random landscape (80 x 21) of varying terrain types (short grass, tall grass, water, boulder, tree)
+I place random seeds of terrain, like the implementation Jeremy suggeted, and from there, the code has 1000 iterations. Each iteration, we choose w * h random points on the map, if the point lands on a cell with terrain decided, we randomly grow into a neighboring cell. After 1000 iterations, the terrain grows into nice looking "terrain blobs". After that, if any remaining cells are empty, I convert them to short grass as a workaround. (I will fix this later)
+
+Then, we trace the borders of the map and place '%'. Once that is done, I choose random points on the borders to use a gates (while avoiding corners). Then, for each NS/EW combo, i choose a random midpoint on the map, and have the respective gates path to that point. While this solution results in lots of straight lines, I dont think it looks THAT bad. I plan on implementing Dykstra's at some point, but we'll cross that bridge when we get there. For now, this works great. Right after that, I have a function that checks for spots on the path to place pokemarts/centers. If no overlap will occur, I place a 2x2 M or C to mark the building. With that, I complete the requirements of the assignment.
+
+Additionally, some debug info is displayed. Currently width and height are displayed, but gate locations can also be viewed by uncommented code in map_generate function.
+
+If there are any questions about the code please feel free to reach out at griffinu@iastate.edu
+
+Thank you
